syntax = "proto3";

option go_package = "./;pb";

message MessageType0x0210SubType0x8A {
  repeated Item info = 1;
  int32 app_id = 2;
  int32 inst_id = 3;
  int32 long_flag = 4;
  bytes reserved = 5;
  message Item {
    int64 from_uin = 1;
    int64 to_uin = 2;
    int32 seq = 3;
    int64 uid = 4;
    int64 time = 5;
    int32 random = 6;
    int32 package_num = 7;
    int32 package_index = 8;
    int32 dev_seq = 9;
  }
}
